# garde-manger

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.example  CONTRIBUTING.md  PLAN-semantic-chunking.md  README.md  config.yaml.template  pyproject.toml
.arc/: archive.jsonl  items.jsonl
.bon/: archive.jsonl.pre-dolt  items.jsonl  understanding.md
.bon/contributions/: 2026-03-22T182800.md
.bon/handoffs/: 2026-04-05-37cade0a.md  2026-04-05-760c7236.md  2026-04-06-a648a317.md  2026-05-12-61289a84.md  7cf5c54d.md  ecc9e8b4.md  f4b7692c.md  fond-seed.md
.claude/: settings.local.json
.claude-plugin/: plugin.json
.github/workflows/: test.yml
docs/: PLAN-semantic-chunking.md  prompts-hybrid.md
hooks/: ensure-garde.sh  session-end.sh
samples/moltbot-memory/: repos-index.md
samples/moltbot-memory/repos/: claude-suite.md  todoist-gtd.md
scripts/: session_length_dist.py
skill/: SKILL.md
skill/references/: COMMANDS.md  TROUBLESHOOTING.md  WORKFLOWS.md
skills/memory/: SKILL.md
skills/memory/references/: TROUBLESHOOTING.md  WORKFLOWS.md
src/garde/: __init__.py  cli.py  config.py  database.py  extraction.py  glossary.py  llm.py  schema.sql
src/garde/adapters/: __init__.py  amp.py  arc.py  beads.py  bon.py  claude_ai.py  claude_code.py  cloud_sessions.py  handoffs.py  knowledge.py  local_md.py
src/garde/cli/: __init__.py  _helpers.py  browse.py  entities.py  extract_cmds.py  fts.py  ingest.py  scan.py
src/mem/: cli.py  config.py  database.py  extraction.py  llm.py
tests/: test_backfill_skip.py  test_beads_adapter.py  test_call_claude.py  test_claude_code_adapter.py  test_cli_drill.py  test_cli_scan.py  test_config.py  test_database.py  test_extraction.py  test_glossary.py  test_handoffs_adapter.py  test_ingest_session.py  test_local_md_adapter.py  test_semantic_chunking.py
